# quizml

./: .gitignore  DEVELOPMENT.md  GEMINI.md  LICENSE  LLMS.md  README.md  TODO.md  bbquiz.py  gemini-notes.txt  newquestions.yaml  pyproject.toml  setup.py
.github/workflows/: publish.yml
bbquiz/: __main__.py  cli.py  utils.py
bbquiz/BlackBoardTestPkg/: BlackBoardTestPkg.py  BlackBoardTestPkg2.py  example-1.py  frcs-example.py
bbquiz/bbyaml/: check_syntax.py  loader.py  stats.py  utils.py
bbquiz/markdown_export/: html_dict_from_md_list.py  latex_dict_from_md_list.py
bbquiz/render/: latex.jinja  to_blackboardpkg.py  to_csv.py  (+3 more)
demo/: quiz1.yaml
docs/: README.md  _sidebar.md  changelog.md  config_files.md  config_latex.md  configuration.md  index.html  llm_prompt_template.md  question_layout.md  quickstart.md  syntax_bbyaml.md  syntax_header.md  syntax_md.md  syntax_questions.md  syntax_yaml.md  targets.md  usage.md  utils.md  writing_templates.md
examples/: debug_padding.py  inspect_headers.py  quiz1.html  quiz1.solutions.tex  quiz1.tex  quiz1.txt  quiz1.yaml  test.py  test_padding.py  test_padding_clean.py
misc/: bbquiz-format.py
scratch/: marko-try.py  mistletoe-try.py  pandoc-try.py
templates/: tcd-eleceng-exam.tex
test/: quiz.yaml  tcdexams.cls
tests/: examquestions.sty  quiz.yaml  test-basic-syntax.yaml  test-markdown.yaml  test_bbyaml_syntax.py  test_cli.py  test_displayeq.py  test_filter_yaml.py  test_format.py  test_html_latex.py  test_markdown.py  test_new_question_types.py  test_quizmlyaml_syntax.py  test_wrap.py  test_yaml_syntax.py
(+74 files in other folders)
